--- a/ui/About.ui
+++ b/ui/About.ui
@@ -11,13 +11,13 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>504</width>
-            <height>349</height>
+            <width>569</width>
+            <height>392</height>
         </rect>
     </property>
     <property stdset="1">
         <name>caption</name>
-        <string></string>
+        <string>About_UI</string>
     </property>
     <vbox>
         <property stdset="1">
@@ -32,7 +32,7 @@
             <class>QLayoutWidget</class>
             <property stdset="1">
                 <name>name</name>
-                <cstring>Layout4</cstring>
+                <cstring>Layout2</cstring>
             </property>
             <hbox>
                 <property stdset="1">
@@ -94,22 +94,14 @@
                     </property>
                 </spacer>
                 <widget>
-                    <class>QLabel</class>
+                    <class>QPushButton</class>
                     <property stdset="1">
                         <name>name</name>
-                        <cstring>TextLabel6</cstring>
-                    </property>
-                    <property stdset="1">
-                        <name>font</name>
-                        <font>
-                            <pointsize>14</pointsize>
-                            <bold>1</bold>
-                            <underline>1</underline>
-                        </font>
+                        <cstring>PushButton1</cstring>
                     </property>
                     <property stdset="1">
                         <name>text</name>
-                        <string>XCA</string>
+                        <string>Done</string>
                     </property>
                 </widget>
                 <spacer>
@@ -173,4 +165,12 @@
         </widget>
     </vbox>
 </widget>
+<connections>
+    <connection>
+        <sender>PushButton1</sender>
+        <signal>clicked()</signal>
+        <receiver>About_UI</receiver>
+        <slot>accept()</slot>
+    </connection>
+</connections>
 </UI>
